[project]
name = "nonnon-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "annotated-types==0.7.0",
  "anyio==4.9.0",
  "asyncio==3.4.3",
  "beautifulsoup4==4.13.4",
  "certifi==2025.7.14",
  "deprecation==2.1.0",
  "diff-match-patch==20241021",
  "feedparser==6.0.11",
  "gotrue==2.12.3",
  "greenlet==3.2.3",
  "h11==0.16.0",
  "h2==4.2.0",
  "hpack==4.1.0",
  "httpcore==1.0.9",
  "httpx==0.28.1",
  "hyperframe==6.1.0",
  "idna==3.10",
  "iniconfig==2.1.0",
  "loguru==0.7.3",
  "lxml==6.0.0",
  "packaging==25.0",
  "playwright==1.54.0",
  "playwright-stealth==2.0.0",
  "pluggy==1.6.0",
  "postgrest==1.1.1",
  "prompt-toolkit==3.0.51",
  "pydantic==2.11.7",
  "pydantic-core==2.33.2",
  "pyee==13.0.0",
  "pygments==2.19.2",
  "pyjwt==2.10.1",
  "pytest==8.4.1",
  "pytest-asyncio==1.1.0",
  "python-dateutil==2.9.0.post0",
  "realtime==2.6.0",
  "sgmllib3k==1.0.0",
  "six==1.17.0",
  "sniffio==1.3.1",
  "soupsieve==2.7",
  "storage3==0.12.0",
  "strenum==0.4.15",
  "supabase==2.17.0",
  "supafunc==0.10.1",
  "typing-extensions==4.14.1",
  "typing-inspection==0.4.1",
  "wcwidth==0.2.13",
  "websockets==15.0.1",
]
